--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-</resources>
+    <color name="white">#F4F6F5</color>
+    <color name="whitesmoke_100">#FAF8ED</color>
+    <color name="orange">#F66F4D</color>
+</resources>3
