--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,39 @@
         <item name="android:textSize">32sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="headerText">
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="fieldText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="smallText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="divider">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/smokey_700</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="fieldBorder">
+        <item name="borderWidth">4dp</item>
+        <item name="borderRound">15dp</item>
+    </style>
+
+    <style name="buttonBorder">
+        <item name="borderWidth">4dp</item>
+        <item name="borderRound">15dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="background">@drawable/bg_button</item>
+    </style>
 </resources>
