--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="smokey_700">#858585</color>
     <color name="smokey_900">#676666</color>
     <color name="abuabu">#F4F5F5</color>
+    <color name="hijau">#31BE2E</color>
 </resources>
