--- a/app/src/main/res/layout/fragment_passenger_details.xml
+++ b/app/src/main/res/layout/fragment_passenger_details.xml
@@ -26,7 +26,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-                android:src="@drawable/img" />
+                android:src="@drawable/profile" />
 
             <TextView
                 android:id="@+id/tanggalPenerbangan"
