tampilan HistoryFragment.kt

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,16 +20,17 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/arrow_back"/>
+
         <TextView
-            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Profile"
-            android:fontFamily="@font/poppins_bold"
-            android:textStyle="bold"
-            android:textSize="24dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="3dp"
-            android:textColor="@color/black"/>
+            android:fontFamily="@font/poppins_bold"
+            android:text="Profile"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -150,6 +151,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:paddingLeft="10dp"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="60dp"
