--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -6,6 +6,9 @@
     <style name="Circular2">
         <item name="cornerSize">10%</item>
     </style>
+    <style name="Circular3">
+        <item name="cornerSize">40%</item>
+    </style>
 
 
 
